@startuml

interface Token {
    +getType(): TokenType
    +getValue(): String
}

class PrintScriptToken implements Token {
    -type: TokenType
    -value: String
    -Position: Coordinate
    +PrintScriptToken(type: TokenType, value: String)
    +getType(): TokenType
    +getValue(): String
    +getPosition(): Coordinate
}

enum TokenType {
    IDENTIFIER
    NUMBER
    STRING
    KEYWORD
    OPERATOR
    SEMICOLON
}

interface Coordinate {
    +getLine(): Int
    +getColumn(): Int
}

class Location implements Coordinate {
    -line: Int
    -column: Int
    +Location(line: Int, column: Int)
    +getLine(): Int
    +getColumn(): Int
}

PrintScriptToken o-- Location : has a

Token <|.. PrintScriptToken
TokenType -- PrintScriptToken

@enduml